--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catalyst League Task Checker</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="https://runeapps.org/nis/nis.css">
     <link rel="alt1" href="appconfig.json">
+    <script src="https://www.unpkg.com/alt1/dist/base/index.js"></script>
 </head>
 <body>
     <div class="container">
