--- a/index.html
+++ b/index.html
@@ -1,42 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-      crossorigin="anonymous"
-    ></script>
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://runeapps.org/nis/nis.css"
-    />
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://runeapps.org/runeappslib.css"
-    />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Catalyst League Task Checker</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="https://runeapps.org/nis/nis.css">
+    <link rel="alt1" href="appconfig.json">
     <script src="https://www.unpkg.com/alt1/dist/base/index.js"></script>
-    <script src="https://www.unpkg.com/alt1/dist/ocr/index.js"></script>
-    <script src="https://www.unpkg.com/alt1/dist/chatbox/index.js"></script>
-  </head>
+</head>
 <body>
     <div class="container">
         <h1>Catalyst League Task Checker</h1>
@@ -86,7 +58,6 @@
             </div>
         </div>
     </div>
-     <script src="scripts/data.js"></script>
-  <script src="scripts/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
